# strace_tree_printer

./: .gitignore  README.md  pyproject.toml  strace_helper.py  strace_tree_printer.py
strace_tree_printer/: __init__.py
